@@ -3277,6 +3277,9 @@ comment|// Try to read first.  This is to allow create
 comment|// against an index that's currently open for
 comment|// searching.  In this case we write the next
 comment|// segments_N file with no segments:
+name|boolean
+name|doCommit
+decl_stmt|;
 try|try
 block|{
 name|segmentInfos
@@ -3291,6 +3294,10 @@ operator|.
 name|clear
 argument_list|()
 expr_stmt|;
+name|doCommit
+operator|=
+literal|false
+expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
@@ -3299,7 +3306,21 @@ name|e
 parameter_list|)
 block|{
 comment|// Likely this means it's a fresh directory
+name|doCommit
+operator|=
+literal|true
+expr_stmt|;
 block|}
+if|if
+condition|(
+name|autoCommit
+operator|||
+name|doCommit
+condition|)
+block|{
+comment|// Always commit if autoCommit=true, else only
+comment|// commit if there is no segments file in this dir
+comment|// already.
 name|segmentInfos
 operator|.
 name|commit
@@ -3307,6 +3328,29 @@ argument_list|(
 name|directory
 argument_list|)
 expr_stmt|;
+name|synced
+operator|.
+name|addAll
+argument_list|(
+name|segmentInfos
+operator|.
+name|files
+argument_list|(
+name|directory
+argument_list|,
+literal|true
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+comment|// Record that we have a change (zero out all
+comment|// segments) pending:
+name|changeCount
+operator|++
+expr_stmt|;
+block|}
 block|}
 else|else
 block|{
