@@ -57,6 +57,11 @@ Changes in runtime behavior
     compatible behavior) but in 3.0 will be hardwired to true.  (Shon
     Vella via Mike McCandless).
 
+ 4. LUCENE-1624: If you open IndexWriter with create=true and
+    autoCommit=false on an existing index, IndexWriter no longer
+    writes an empty commit when it's created.  (Paul Taylor via Mike
+    McCandless)
+
 API Changes
 
 1. LUCENE-1419: Add expert API to set custom indexing chain. This API is 
